<resources>
    <string name="app_name">Nexus Recorder X</string>
    <string name="start_recording">Mulai Rekam</string>
    <string name="stop_recording">Stop</string>
    <string name="settings">Pengaturan</string>
    <string name="recordings">Galeri Rekaman</string>
    <string name="resolution">Resolusi</string>
    <string name="fps">FPS</string>
    <string name="bitrate">Bitrate</string>
    <string name="audio_source">Sumber Audio</string>
    <string name="facecam">Facecam</string>
    <string name="floating_widget">Tombol Mengambang</string>
    <string name="notif_channel_recording">Perekaman Layar</string>
    <string name="notif_recording_title">Sedang merekam layar</string>
    <string name="notif_recording_text">Ketuk untuk membuka kontrol</string>
</resources>
